

    <TabHost 
    android:id="@android:id/tabhost" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout 
    	android:orientation="vertical" 
    	android:layout_width="fill_parent" 
    	android:layout_height="fill_parent">
        <FrameLayout 
        	android:id="@android:id/tabcontent" 
        	android:layout_width="fill_parent" 
        	android:layout_height="0.0dip" 
        	android:layout_weight="1.0" />
        <TabWidget 
        	android:id="@android:id/tabs" 
        	android:visibility="gone" 
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="0.0" />
        <RadioGroup 
        	android:gravity="center_vertical" 
        	android:layout_gravity="bottom" 
        	android:orientation="horizontal" 
        	android:id="@+id/main_radio" 
        	android:background="@drawable/top_bar" 
        	android:layout_width="fill_parent" 
        	android:layout_height="50dp">
            <RadioButton 
                android:enabled="true"
                android:checked="true"
            	android:id="@+id/rb_home" 
            	android:tag="radio_button0" 
            	android:layout_marginTop="2.0dip" 
            	android:text="@string/library" 
            	android:drawableTop="@drawable/library" 
            	style="@style/main_tab_bottom" />
            <RadioButton 
            	android:id="@+id/rb_collect" 
            	android:tag="radio_button1" 
            	android:layout_marginTop="2.0dip" 
            	android:text="@string/collect" 
            	android:drawableTop="@drawable/collect_buttom" 
            	style="@style/main_tab_bottom" />
            <RadioButton 
            	android:id="@+id/rb_more" 
            	android:tag="radio_button2" 
            	android:layout_marginTop="2.0dip" 
            	android:text="@string/more" 
            	android:drawableTop="@drawable/more" 
            	style="@style/main_tab_bottom" />
            
        </RadioGroup>
    </LinearLayout>
</TabHost>
    
